# DryadSynth

./: .dockerignore  .gitignore  .gitmodules  Boom.java  Bullet.java  Cargo.toml  Defender.java  Dockerfile  GameManager.java  Invader.java  LICENSE  Makefile  Note.md  README.md  Run.java  SelectionBoard.java  Sygus.g4  SygusV1.g4  countdepth.py  exec.sh  log.thread.0.txt.1  log.thread.1.txt.1  log.thread.2.txt.1  log.thread.3.txt.1  todo.list  tree.txt
docs/: figure.tex  (+4 more)
dryadsynth/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  reachability-metadata.json
dryadsynth-bv/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
dryadsynth-bv/config/: s64crni-bw-c.toml  s64crnid-bw-c4.toml  s64ni-bw.toml  s64nid-bw.toml  s8.toml
dryadsynth-bv/config/sampling/: s1024crd.toml  s1crd.toml  s32crd.toml
dryadsynth-bv/config/time/: s8crdt1000.toml  s8crdt250.toml  s8crdt500.toml
dryadsynth-bv/hackers-delight/: hd-02.sl  hd-03.sl  hd-04.sl  hd-05.sl  hd-06.sl  hd-07.sl  hd-10.sl  hd-11.sl  hd-13.sl  hd-14.sl  hd-15.sl  hd-16.sl  hd-18.sl  hd-20.sl  hd-24.sl  hd-25.sl  hd-26.sl
dryadsynth-bv/src/: cegis.rs  hash.rs  lib.rs  log.rs  main.rs  solutions.rs
dryadsynth-bv/src/chatgpt/: mod.rs  parsing.rs
dryadsynth-bv/src/deductive/: combine.rs  reverse.rs
dryadsynth-bv/src/enumerate/: algo.rs  algo2.rs  algo3.rs  algo4.rs  config.rs  expr.rs  mod.rs  op.rs  store.rs  utils.rs
dryadsynth-bv/src/parse/: cfg.rs  deffun.rs  literals.rs  mod.rs  problem.rs  sexpr.rs
dryadsynth-bv/src/search/: filter.rs  mod.rs  sample.rs  search.rs
dryadsynth-bv/src/tree_learning/: bits.rs
dryadsynth-bv/tree-sitter/tree-sitter-python/: grammar.js
dryadsynth/StarExec/: starexec_build  starexec_description.txt
dryadsynth/benchmarks/CLIA-fromGeneral/: fg_LinExpr_eq1ex.sl  fg_LinExpr_inv1.sl  fg_LinExpr_inv1_ex.sl
dryadsynth/benchmarks/General-CLIA/: max2.sl
dryadsynth/benchmarks/General-Ext/: qm_area_sel_2.sl  qm_max6.sl  qm_neg_8.sl  qm_neg_eq_6.sl  qm_neg_eq_7.sl
dryadsynth/benchmarks/Generators/: inv.py
dryadsynth/benchmarks/INV/: NetBSD_loop_true-unreach-call_true-termination.sl  simple_vardep_true-unreach-call2_true-termination.sl
dryadsynth/benchmarks/INV-SV/: css2003_true-unreach-call_true-termination.sl  down_true-unreach-call_true-termination.sl  gr2006_true-unreach-call_true-termination.sl  simple_false-unreach-call2_true-termination.sl  sum01_bug02_false-unreach-call_true-termination.sl  sum01_bug02_sum01_bug02_base.sl  sum01_false-unreach-call_true-termination.sl  sum03_false-unreach-call_true-termination.sl  sum03_true-unreach-call_false-termination.sl  underapprox_false-unreach-call1_true-termination.sl
dryadsynth/benchmarks/NestedLoops/: nested_true-unreach-call_true-terminationclia.sl  nested_true-unreach-callclia.sl
dryadsynth/docs/: bitvector.md
dryadsynth/scripts/: graalvm.rs  java_capnp.rs  main.rs  z3.rs
dryadsynth/src/: main.rs
src/BVDeduct/: .gitignore  Cargo.toml  Makefile
(+1497 files in other folders)
