[package]
name = "dryadsynth-bv"
version = "0.1.0"
edition = "2021"
authors = ["YuantianDing <work.yt.ding@gmail.com>"]
license = "MIT"
description = "DryadSynth solver for bit manipulating programs"
homepage = "https://github.com/purdue-cap/DryadSynth"
repository = "https://github.com/purdue-cap/DryadSynth"
readme = "README.md"
keywords = ["synthesis",  "bit-manipulating", "dryadsynth", "bit-vector", "sygus"]

[dependencies]
ahash = "0.8.3"
aligned-array = "1.0.1"
tokio = { version = "1", features = ["full"] }
bitwuzla-sys = "0.2"
bumpalo = "3.12.0"
bytemuck = "1.13.0"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
derive_more = "0.99.17"
dhat = "0.3.2"
either = "1.8.1"
extension-trait = "1.0.2"
figment = { version = "0.10.8", features = ["toml"] }
fnv = "1.0.7"
hash_hasher = "2.0.3"
integer-cbrt = "0.1.2"
integer-sqrt = "0.1.5"
itertools = "0.4.3"
join-lazy-fmt = "0.9.2"
nohash-hasher = "0.2.0"
nom = "7.1.3"
pest = "2.5.5"
pest_derive = "2.5.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsmt2 = "0.16.2"
rustc-hash = "1.1.0"
sdset = "0.4.0"
separator = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
smallvec = "1.10.0"
thiserror = "1.0.38"
toml = "0.7.2"
tree-sitter = "0.20.10"
you-can = "0.0.14"
# z3 = "0.11.2"
futures = "0.3.28"
clone_all = "0.1.1"
ruint = "1.8.0"
spin = "0.9.8"
openai = "1.0.0-alpha.13"
iter_fixed = "0.3.1"
lazy_static = "1.5.0"

[features]
dhat-heap = []

[build-dependencies]
cc="*"
# cxx-build = "1.0"
